# Intelligent-Generative-AI-Driven-Vehicle-Insurance-Claims-Processing-System

./: .gitignore  README.md  dockerfile  pyproject.toml  requirements.txt  setup.py
claim_pipeline/: pipeline_runner.py
claim_pipeline/ai/: summarizer.py
claim_pipeline/extraction/: ocr_extractor.py  pdf_extractor.py
claim_pipeline/hitl/: hitl_manager.py
claim_pipeline/ingestion/: email_ingest.py  file_router.py  uploader.py
claim_pipeline/preprocessing/: pdf_to_images.py
claim_pipeline/processing/: ai_field_infer.py  decision_engine.py  field_extractor.py  normalizer.py  validator.py
claim_pipeline/security/: auth_manager.py  pii_redactor.py  retention_manager.py  secure_logging.py
claim_pipeline/storage/: storage_manager.py
claim_pipeline/ui/: app.py
claim_pipeline/utils/: text_reader.py
config/: config.py  logging.yaml
data/: users.json
data/audit_logs/: claim_ac0c7321_audit.json
data/claims/claim_03d2055d/decision/: decision.json
data/claims/claim_03d2055d/extracted/: text.json
data/claims/claim_03d2055d/fields/: fields.json
data/final/: claim_ac0c7321_final.json
data/reviews/: claim_ac0c7321.json
test/: test_ai_field_infer.py  test_auth_manager.py  test_decision_engine.py  test_email_ingest.py  test_field_extractor.py  test_file_router.py  test_hitl_manager.py  test_normalizer.py  test_ocr_extractor.py  test_pdf_extractor.py  test_pdf_to_images.py  test_pii_redactor.py  test_retention_manager.py  test_secure_logging.py  test_storage_manager.py  test_summarizer.py  test_uploader.py  test_validator.py
(+11 files in other folders)
